Fixes ticket DT-969, single line forms set to 100% on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2062,6 +2062,18 @@ select {
 		select, label {
 			width: 100%;
 		}
+		.form-group.productlist-search button {
+			bottom: 0;
+			top: initial;
+		}
+	}
+	
+	/* SINGLE FIELDS */
+	.productlist-display-form input[type=search],
+	.widget.profile form fieldset input,
+	.signupform fieldset input,
+	input[type=search], input[type=email], input[type=password], input[type=text] {
+		width: 100%;
 	}
 }
 
